feat(post): 新增创建帖子接口; fix:修复接口认证问题，repo 单词拼写错误
