# internal/api/dto/post.go
@@ -1,0 +1,7 @@
+package dto
+
+type CreatePostReq struct {
+	Title       string `json:"title" binding:"required"`
+	Content     string `json:"content" binding:"required"`
+	CommunityID int64  `json:"community_id" binding:"required"`
+}
